@@ -9,14 +9,14 @@ descriptor in the descriptor pool.
 P(type, file)
 }
 \arguments{
-  \item{type}{Fully qualified type name of the protocol buffer}
+  \item{type}{Fully qualified type name of the protocol buffer or extension}
   \item{file}{optional proto file. If given, the definition
   contained in the file is first registered with the 
   pool of message descriptors}
 }
 \value{
-An object of class \linkS4class{Descriptor}. 
-An error is generated otherwise.
+An object of class \linkS4class{Descriptor} for message types or
+\linkS4class{FieldDescriptor} for extensions.  An error is generated otherwise.
 }
 \author{
 Romain Francois <francoisromain@free.fr>
